- New introduction patterns "*" for introducing the next block of dependent 
  variables and "**" for introducing all quantified variables and hypotheses.
- Pattern Unification for existential variables activated in tactics and 
  new option "Unset Tactic Evars Pattern Unification" to deactivate it.
- New tactic "etransitivity".
- Support of JMeq for "injection" and "discriminate".
- New variant "subst'" of "subst" that supports JMeq.
- New tactic "decide lemma with hyp" for rewriting decidability lemmas
  when one knows which side is true.
- Tactic "exists", "eexists", "destruct" and "edestruct" supports iteration
  using comma-separated arguments.
- Tactic "gappa" has been removed from the Dp plugin.
- Tactic "firstorder" now supports the combination of its "using" and
  "with" options.
- An inductive type as argument of the "using" option of "auto/eauto/firstorder"
  is interpreted as using the collection of its constructors.
- Tactic names "case" and "elim" now support clauses "as" and "in" and become
  then synonymous of "destruct" and "induction" respectively.
- A new tactic name "exfalso" for the use of 'ex-falso quodlibet' principle.
  This tactic is simply a shortcut for "elimtype False".
- Added support for Leibniz-rewriting of dependent hypotheses.
- Binders given before ":" in lemmas are now automatically
  introduced in the context (possible source of incompatibility that can be
  avoided by unsetting option "Automatic Introduction").
- Made quantified hypotheses get the name they would have if introduced in
  the context (possible but rare source of incompatibilities).

Tactic Language

- Support for parsing non-empty lists with separators in tactic notations.

Notations

- Record syntax "{|x=...; y=...|}" now works inside patterns too.
- Abbreviations from non-imported module now invisible at printing time.
- Abbreviations now use implicit arguments and arguments scopes for printing.