@@ -850,7 +850,7 @@ let compute_dec_tact ind lnamesparrec nparrec gsig =
                   Auto.default_auto
 		]);
 	      Equality.general_rewrite_bindings_in true
-	                      all_occurrences
+	                      all_occurrences false
                               (List.hd !avoid)
                               ((mkVar (List.hd (List.tl !avoid))),
                                 Rawterm.NoBindings
